# neo4j-python-example

./: README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/cypher_queries/: 1-Create.txt  2-Find.txt  3-Match.txt  4-Solve.txt  5-Recommend.txt  6-Cleanup.txt
src/neo4j_example/: asgi.py  settings.py  urls.py  wsgi.py
src/neo4j_poc/: asgi.py  settings.py  urls.py  wsgi.py
src/neomodel/: 1-Create.py  2-Find.py  3-Match.py  6.1-Cleanup.py  6.2-Cleanup.py  models.py
