[tool.poetry]
name = "neo4j-poc"
version = "0.1.0"
description = "POC for testing neo4j drivers and comparing with postgreSQL"
authors = ["Denis Germano <dlcgermano@gmail.com>", "Jhon Rocha <jhonantans.rocha@nearform.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "<5"
djangorestframework = "^3.14.0"
neo4j = "^5.15.0"
neomodel = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
